--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-09-08 16:29+0200\n"
-"PO-Revision-Date: 2018-09-05 14:26+0000\n"
+"PO-Revision-Date: 2018-09-15 14:25+0000\n"
 "Last-Translator: Rafael Lotto Machado <Unknown>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-09-08 15:28+0000\n"
-"X-Generator: Launchpad (build 18767)\n"
+"X-Launchpad-Export-Date: 2018-10-07 10:28+0000\n"
+"X-Generator: Launchpad (build 18785)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:945
 msgid "HomeBank"
@@ -170,7 +170,7 @@ msgstr "%d transações"
 #: ../src/dsp_account.c:1775
 #, c-format
 msgid "%d transactions, %d selected, avg: %s, sum: %s (%s - %s)"
-msgstr ""
+msgstr "%d transações, %d selecionadas, média: %s, soma: %s (%s - %s)"
 
 #. name, icon-name, label
 #: ../src/dsp_account.c:1989
@@ -1332,11 +1332,11 @@ msgstr "Ver resultados como barras empilhadas"
 
 #: ../src/rep_budget.c:862
 msgid " over"
-msgstr " em cima"
+msgstr " acima"
 
 #: ../src/rep_budget.c:868
 msgid " left"
-msgstr " esquerda"
+msgstr " restando"
 
 #: ../src/rep_budget.c:871
 msgid " under"
@@ -3328,7 +3328,7 @@ msgstr "_Carteiras:"
 
 #: ../src/ui-pref.c:1904
 msgid "Exchange files"
-msgstr ""
+msgstr "Arquivos do Exchange"
 
 #: ../src/ui-pref.c:1908
 msgid "_Import:"
@@ -3554,10 +3554,3 @@ msgstr "incluir"
 #: ../src/ui-widgets.c:977
 msgid "Exclude"
 msgstr "Excluir"
-
-#~ msgid "Unmark duplicate"
-#~ msgstr "Desmarcar duplicidade"
-
-#, c-format
-#~ msgid "%d transactions, %d selected, sum: %s (%s - %s)"
-#~ msgstr "%d transações, %d selecionadas, total: %s (%s - %s)"
