--- a/po/ru.po
+++ b/po/ru.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: HomeBank 3.2.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-09-08 16:29+0200\n"
-"PO-Revision-Date: 2018-08-13 07:44+0000\n"
-"Last-Translator: Konstantin <zobovkos@mail.ru>\n"
+"PO-Revision-Date: 2018-09-29 11:21+0000\n"
+"Last-Translator: johnerd <Unknown>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-09-08 15:28+0000\n"
-"X-Generator: Launchpad (build 18767)\n"
+"X-Launchpad-Export-Date: 2018-10-07 10:28+0000\n"
+"X-Generator: Launchpad (build 18785)\n"
 
 #: ../data/homebank.desktop.in.in.h:1 ../src/dsp_mainwindow.c:945
 msgid "HomeBank"
@@ -305,7 +305,7 @@ msgstr "Пометить дубликаты..."
 #. { "DuplicateClear", NULL                      , N_("Unmark duplicate"), NULL,	NULL, G_CALLBACK (register_panel_action_duplicate_unmark) },
 #: ../src/dsp_account.c:2016
 msgid "Check internal xfer"
-msgstr ""
+msgstr "Проверить внутренние переводы"
 
 #: ../src/dsp_account.c:2017
 msgid "Auto. assignments"
@@ -2293,11 +2293,11 @@ msgstr "Формат дат:"
 
 #: ../src/ui-assist-import.c:1545 ../src/ui-pref.c:1182
 msgid "_Import memos"
-msgstr ""
+msgstr "_Импортировать заметки"
 
 #: ../src/ui-assist-import.c:1549 ../src/ui-pref.c:1185
 msgid "_Swap memos with payees"
-msgstr ""
+msgstr "_Поменять заметки на получателя"
 
 #: ../src/ui-assist-import.c:1559 ../src/ui-pref.c:1155
 msgid "OFX _Name:"
@@ -2822,7 +2822,7 @@ msgstr "Категории"
 #. gtk_widget_show(GTK_WIDGET(page));
 #: ../src/ui-filter.c:444 ../src/ui-filter.c:1479
 msgid "Payees"
-msgstr ""
+msgstr "Получатель платежа"
 
 #: ../src/ui-filter.c:1031 ../src/ui-filter.c:1053 ../src/ui-filter.c:1077
 #: ../src/ui-filter.c:1151 ../src/ui-filter.c:1201 ../src/ui-filter.c:1254
@@ -3012,7 +3012,7 @@ msgstr "Отчёт"
 
 #: ../src/ui-pref.c:90 ../src/ui-pref.c:1828
 msgid "Backup"
-msgstr ""
+msgstr "Резервное копирование"
 
 #: ../src/ui-pref.c:91
 msgid "Folders"
@@ -3120,7 +3120,7 @@ msgstr ""
 
 #: ../src/ui-pref.c:1195
 msgid "Other options"
-msgstr ""
+msgstr "Другие настройки"
 
 #: ../src/ui-pref.c:1257
 msgid "Initial filter"
@@ -3533,10 +3533,3 @@ msgstr "Включить"
 #: ../src/ui-widgets.c:977
 msgid "Exclude"
 msgstr "Исключить"
-
-#~ msgid "Unmark duplicate"
-#~ msgstr "Снять пометку с дубликатов"
-
-#, c-format
-#~ msgid "%d transactions, %d selected, sum: %s (%s - %s)"
-#~ msgstr "%d операций, %d выбрано, сумма: %s (%s - %s)"
